New CS projects

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /CSFileManager/obj/Debug/net6.0
+/CSFileManagerClient/obj
+/CSFileManager/obj
