--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /CSFileManager/obj/Debug/net6.0
 /CSFileManagerClient/obj
 /CSFileManager/obj
+/CSharpFileManager/obj/Debug
+/CSFileManagerClient/.vs/CSFileManager/v17
+/CSharpFileManager/obj/Release
+/CSFileManager/.vs/CSFileManager/v17
