started a sibling project, but in C Sharp which I still prefer over Python.  Microsoft has a vast selection of fantastic stuff even vba which takes a beating among the kid devs.  vba is and has been awesome for years

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /CSFileManagerClient/.vs/CSFileManager/v17
 /CSharpFileManager/obj/Release
 /CSFileManager/.vs/CSFileManager/v17
+/CSFileManagerClient/bin/Debug
+/CSharpFileManager/bin/Debug
