Combined projects, also began the model in cs, then decided to just use microsoft or google tasks/events/contacts since it is already built.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@
 /CSFileManager/.vs/CSFileManager/v17
 /CSFileManagerClient/bin/Debug
 /CSharpFileManager/bin/Debug
+/AuditManager/.vs/AuditManager/v17
+/AuditManager/obj/Debug
+/AuditManager/packages
+/AuditManager/Properties
+/AuditManagerCommon/obj/Debug
+/packages
+/AuditManager/bin/Debug
+/AuditManagerCommon/bin/Debug
